# HamTTPD

./: .gitignore  Cargo.toml  LoTW-root.pem  README.md  nginx.conf  openssl.conf
migrations/2023-03-13-174334_create_messages/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: style.css
templates/: 404.html  about.html  index.html
