[package]
name = "hamttpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = { version = "0.6.10", features = ["form"] }
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["postgres", "chrono"] }
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs"] }
